fixed alignedment

--- a/css/index.css
+++ b/css/index.css
@@ -7,12 +7,16 @@
     /* width: 900px; */
     min-width: 900px;
     max-width: 1366px;
+
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
 
 .cuadrados
 {
     display: flex;
-
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     
@@ -36,12 +40,21 @@
 {
     display: flex;
     flex-direction: column;
-    /* justify-content: flex-start; */
-    align-items: flex-start;
     padding: 0px;
     margin-top: 0px;
-    margin-left: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.columna_izq
+{
     margin-right: 20px;
+}
+
+.columna_der
+{
+    margin-left: 20px;
+
 }
 
 .section_figureColumna_cuadroPeque {
